[swagger] add domain status PENDING_CREATE, PENDING_UPDATE, PENDING_DELETE
