# swagger.yml
@@ -1243,7 +1243,9 @@ definitions:
       provisioning_status:
         type: string
         enum:
-          - PENDING
+          - PENDING_CREATE
+          - PENDING_UPDATE
+          - PENDING_DELETE
           - ACTIVE
           - ERROR
         readOnly: true
